--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
     />
+
+    <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/recyclerView"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="0dp"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toBottomOf="@id/newTempoButton"-->
+            <!--app:layout_constraintBottom_toTopOf="@id/lastTempoButton"-->
+    <!--&gt;-->
+
+
+    <!--</android.support.v7.widget.RecyclerView>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
